fix alignment of header secondary and ul

--- a/components/sass/_modules.scss
+++ b/components/sass/_modules.scss
@@ -29,13 +29,15 @@ main {
 
     .layout{
 
-      padding: 0;
+      padding-top:0;
+      padding-bottom:0;
       margin: 0 auto;
     
     }//headsecondary layout
 
     ul{
-      padding:0;
+      
+      padding: 0;
     }//headsecondary ul
 
 
