--- a/style.css
+++ b/style.css
@@ -780,7 +780,8 @@ main {
 }
 
 .headsecondary .layout {
-  padding: 0;
+  padding-top: 0;
+  padding-bottom: 0;
   margin: 0 auto;
 }
 .headsecondary ul {
